Picture-in-Picture: always notify the player when the window is closed.

At the moment, we only notify the player if it was playing. This will
notify the player all the time but only pause it if it is playing.

Bug: 845560
Change-Id: Ifceafbc5eaa79927935ed4b5f50a147b03f955b5
Reviewed-on: https://chromium-review.googlesource.com/1069713
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: apacible <apacible@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561648}
Former-commit-id: 6dbae413ae1ffa7594f26206271ab4e64a2f6d30